# pertaasr_gemini

./: .gitignore  Dockerfile  README.md
.github/workflows/: pertaasr.yml  pertaasr_amd64.yml  pertaasr_arm64.yaml  rust_server.yml  rust_server_amd64.yml  rust_server_arm64  rust_server_arm64.yaml  wrk.yml  wrk_amd64.yml  wrk_arm64.yaml
java/pertaasr_ffi/: pom.xml
java/pertaasr_ffi/src/main/java/com/google/gemini/ffi/: UpCallMethodStub.java
java/pertaasr_supplier/: pom.xml
java/pertaasr_supplier/src/main/java/com/google/gemini/model/: ForyRequest.java  PerConnectionData.java
rust/: Benchmark.md  Dockerfile  pertaasr.yaml  wrk.yaml  wrk_5_runs.md
rust/pertaasr/: Benchmark.md  Cargo.toml  Dockerfile  pertaasr.yaml  pertaasr_build.yaml  plow.yaml  plow_5_runs.md
rust/pertaasr/src/: constants.rs  ffi.rs  main.rs  reqwest_client.rs  structs.rs  utils.rs
rust/src/: main.rs
rust_hello_world_server/: Cargo.toml  Dockerfile  Dockerfile.rust_server  Dockerfile.wrk  Readme.md
rust_hello_world_server/src/: main.rs
test_server/: Cargo.toml  Readme.md
test_server/src/: main.rs
wrk/: Dockerfile
