[package]
name = "pertaasr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["client", "http1", "full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
http-body-util = { version = "0", features = ["full"] }
bytes = "1"
quanta = "0"
core_affinity = "0"
[profile.release]
opt-level = 3
lto = "fat"
