[package]
name = "pertaasr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
http-body-util = { version = "0.1.3", features = ["full"] }
bytes = { version = "1.11.0", features = ["default", "extra-platforms"] }
quanta = { version = "0.12.6", features = ["default"] }
tikv-jemallocator = { version = "0.6.1", features = ["override_allocator_on_supported_platforms", "unprefixed_malloc_on_supported_platforms"] }
tokio-util = { version = "0.7.18", features = ["full"] }
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
